# risc-v

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.api  README.md  docker-compose.yml  launch.json  riscv.code-workspace  settings.json
api/: control_table_data.py  generator.py  launch.bat  leeme.md  main.py  program_data.py
api/src/: control_table_data.py
core/: leeme.md
core/include/: ALU.h  Adder.h  Assembler.h  Cache.h  Config.h  ControlTableData.h  ControlUnit.h  CoreExport.h  CoreTypes.h  Memory.h  Mux.h  RegisterFile.h  SignExtender.h  Simulator.h
core/src/: ALU.cpp  Adder.cpp  Api.cpp  Api.h  Assembler.cpp  Cache.cpp  ControlUnit.cpp  Memory.cpp  Mux.cpp  RegisterFile.cpp  SignExtender.cpp  Simulator.cpp
docs/: Tema 2 - Monociclo.pptx  Tema 2 - Segmentado.pptx  leeme.md
nginx/: nginx.conf
programs/: assembler.py  leeme.md
programs/asm/: completo.s  program.s  programD.s  test.s
resources/: README.md  assembler.ipynb  calculaCoordenadas.xlsx  generate_control_table.py  generate_program.py  instructions.json
simulator_ui/: README.md  TROUBLESHOOTING.md  pubspec.yaml
simulator_ui/lib/: adder_widget.dart  animations.dart  buses_painter.dart  colors.dart  control_unit_widget.dart  datapath_state.dart  execution_history_manager.dart  execution_history_view.dart  extender_widget.dart  geometry.dart  hazard_unit_widget.dart  ib_widget.dart  main.dart  memory_unit_widget.dart  mux2_widget.dart  mux3_widget.dart  mux_widget.dart  pc_widget.dart  platform_init.dart  platform_init_desktop.dart  platform_init_stub.dart  platform_init_web.dart  program_listing_view.dart  reg_widget.dart  simulation_mode.dart  tooltip_widgets.dart
simulator_ui/lib/services/: api_simulation_service.dart  ffi_simulation_service - copia.dart  ffi_simulation_service.dart  ffi_simulation_service_chatgpt.dart  get_service.dart  get_service_desktop.dart  get_service_web.dart  simulation_service.dart
simulator_ui/test/: widget_test.dart
tests/: leeme.md  main_test.cpp
